<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/toolbarItemsGroup">
        <item
            android:id="@+id/itemGroupActions"
            android:title="@string/group_actions"
            app:showAsAction="never">
            <menu>
                <item
                    android:id="@+id/itemToggleFavouriteForSelected"
                    android:icon="@drawable/ic_baseline_favourite_unchecked"
                    android:title="@string/toggle_favourite"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/itemDeleteSelected"
                    android:icon="@drawable/ic_delete"
                    android:title="@string/delete"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
</menu>