<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:fitsSystemWindows="true"
    tools:context=".details.presentation.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_appbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.PetStore.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/pet_avatar"
                android:scaleType="centerCrop"
                tools:src="@drawable/default_cat_sample" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/details_toolbar_menu"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:navigationContentDescription="@string/go_back"
                app:popupTheme="@style/Theme.PetStore.PopupOverlay"
                tools:title="@string/app_name" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content"
        layout="@layout/content_scrolling" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>